python/tests/gold/tracingdriverlightstep/snapshots/aconf.json
{
    "_errors": {},
    "_fast_validation_disagreements": {},
    "_notices": {
        "lightstep-config-test.default.2": [
            "apiVersion ambassador/v0 is deprecated, consider upgrading"
        ]
    },
    "_sources": {
        "--diagnostics--": {
            "_referenced_by": {},
            "apiVersion": "getambassador.io/v0",
            "description": "The '--diagnostics--' source marks objects created by Ambassador to assist with diagnostic output.",
            "kind": "Diagnostics",
            "location": "--diagnostics--",
            "name": "Ambassador Diagnostics",
            "namespace": null,
            "rkey": "--diagnostics--",
            "serialization": null,
            "version": "getambassador.io/v0"
        },
        "--internal--": {
            "_referenced_by": {},
            "apiVersion": "getambassador.io/v0",
            "description": "The '--internal--' source marks objects created by Ambassador's internal logic.",
            "kind": "Internal",
            "location": "--internal--",
            "name": "Ambassador Internals",
            "namespace": null,
            "rkey": "--internal--",
            "serialization": null,
            "version": "getambassador.io/v0"
        },
        "cleartext-host-tracingdriverlightstep.default.1": {
            "_referenced_by": {},
            "acmeProvider": {
                "authority": "none"
            },
            "ambassador_id": [
                "tracingdriverlightstep"
            ],
            "apiVersion": "getambassador.io/v2",
            "generation": 2,
            "hostname": "*",
            "kind": "Host",
            "location": "cleartext-host-tracingdriverlightstep.default.1",
            "metadata_labels": {
                "ambassador_crd": "cleartext-host-tracingdriverlightstep.default",
                "kat-ambassador-id": "tracingdriverlightstep",
                "scope": "AmbassadorTest"
            },
            "name": "cleartext-host-tracingdriverlightstep",
            "namespace": "default",
            "requestPolicy": {
                "insecure": {
                    "action": "Route"
                }
            },
            "rkey": "cleartext-host-tracingdriverlightstep.default.1",
            "selector": {
                "matchLabels": {
                    "hostname": "tracingdriverlightstep"
                }
            },
            "serialization": "acmeProvider:\n  authority: none\nambassador_id:\n- tracingdriverlightstep\napiVersion: getambassador.io/v2\ngeneration: 2\nhostname: '*'\nkind: Host\nmetadata_labels:\n  ambassador_crd: cleartext-host-tracingdriverlightstep.default\n  kat-ambassador-id: tracingdriverlightstep\n  scope: AmbassadorTest\nname: cleartext-host-tracingdriverlightstep\nnamespace: default\nrequestPolicy:\n  insecure:\n    action: Route\nselector:\n  matchLabels:\n    hostname: tracingdrive [...]
            "tlsSecret": {}
        },
        "k8s-lightstep-config-test-default": {
            "_referenced_by": {},
            "ambassador_id": "tracingdriverlightstep",
            "apiVersion": "getambassador.io/v2",
            "endpoints": {},
            "kind": "Service",
            "location": "k8s-lightstep-config-test-default",
            "metadata_labels": {
                "kat-ambassador-id": "tracingdriverlightstep",
                "scope": "AmbassadorTest"
            },
            "name": "lightstep-config-test",
            "namespace": "default",
            "rkey": "k8s-lightstep-config-test-default",
            "serialization": "ambassador_id: tracingdriverlightstep\napiVersion: getambassador.io/v2\nendpoints: {}\nkind: Service\nmetadata_labels:\n  kat-ambassador-id: tracingdriverlightstep\n  scope: AmbassadorTest\nname: lightstep-config-test\nnamespace: default\n"
        },
        "k8s-tracingdriverlightstep-admin-default": {
            "_referenced_by": {},
            "ambassador_id": "tracingdriverlightstep",
            "apiVersion": "getambassador.io/v2",
            "endpoints": {},
            "kind": "Service",
            "location": "k8s-tracingdriverlightstep-admin-default",
            "metadata_labels": {
                "kat-ambassador-id": "tracingdriverlightstep",
                "scope": "AmbassadorTest",
                "service": "tracingdriverlightstep-admin"
            },
            "name": "tracingdriverlightstep-admin",
            "namespace": "default",
            "rkey": "k8s-tracingdriverlightstep-admin-default",
            "serialization": "ambassador_id: tracingdriverlightstep\napiVersion: getambassador.io/v2\nendpoints: {}\nkind: Service\nmetadata_labels:\n  kat-ambassador-id: tracingdriverlightstep\n  scope: AmbassadorTest\n  service: tracingdriverlightstep-admin\nname: tracingdriverlightstep-admin\nnamespace: default\n"
        },
        "k8s-tracingdriverlightstep-default": {
            "_referenced_by": {},
            "ambassador_id": "tracingdriverlightstep",
            "apiVersion": "getambassador.io/v2",
            "endpoints": {},
            "kind": "Service",
            "location": "k8s-tracingdriverlightstep-default",
            "metadata_labels": {
                "app.kubernetes.io/component": "ambassador-service",
                "kat-ambassador-id": "tracingdriverlightstep",
                "scope": "AmbassadorTest"
            },
            "name": "tracingdriverlightstep",
            "namespace": "default",
            "rkey": "k8s-tracingdriverlightstep-default",
            "serialization": "ambassador_id: tracingdriverlightstep\napiVersion: getambassador.io/v2\nendpoints: {}\nkind: Service\nmetadata_labels:\n  app.kubernetes.io/component: ambassador-service\n  kat-ambassador-id: tracingdriverlightstep\n  scope: AmbassadorTest\nname: tracingdriverlightstep\nnamespace: default\n"
        },
        "k8s-tracingdriverlightstep-http-default": {
            "_referenced_by": {},
            "ambassador_id": "tracingdriverlightstep",
            "apiVersion": "getambassador.io/v2",
            "endpoints": {},
            "kind": "Service",
            "location": "k8s-tracingdriverlightstep-http-default",
            "metadata_labels": {
                "kat-ambassador-id": "tracingdriverlightstep",
                "scope": "AmbassadorTest"
            },
            "name": "tracingdriverlightstep-http",
            "namespace": "default",
            "rkey": "k8s-tracingdriverlightstep-http-default",
            "serialization": "ambassador_id: tracingdriverlightstep\napiVersion: getambassador.io/v2\nendpoints: {}\nkind: Service\nmetadata_labels:\n  kat-ambassador-id: tracingdriverlightstep\n  scope: AmbassadorTest\nname: tracingdriverlightstep-http\nnamespace: default\n"
        },
        "lightstep-config-test.default.1": {
            "_referenced_by": {},
            "ambassador_id": "tracingdriverlightstep",
            "apiVersion": "getambassador.io/v2",
            "config": {
                "access_token_file": "/etc/issue"
            },
            "driver": "lightstep",
            "kind": "TracingService",
            "location": "lightstep-config-test.default.1",
            "metadata_labels": {
                "kat-ambassador-id": "tracingdriverlightstep",
                "scope": "AmbassadorTest"
            },
            "name": "lightstep-config-test",
            "namespace": "default",
            "rkey": "lightstep-config-test.default.1",
            "serialization": "_force_validation: true\nambassador_id: tracingdriverlightstep\napiVersion: ambassador/v2\nconfig:\n  access_token_file: /etc/issue\ndriver: lightstep\nkind: TracingService\nmetadata_labels:\n  kat-ambassador-id: tracingdriverlightstep\n  scope: AmbassadorTest\nname: lightstep-config-test\nnamespace: default\nservice: lightstep-config-test:9411\n",
            "service": "lightstep-config-test:9411"
        },
        "lightstep-config-test.default.2": {
            "_referenced_by": {},
            "ambassador_id": "tracingdriverlightstep",
            "apiVersion": "getambassador.io/v0",
            "kind": "Mapping",
            "location": "lightstep-config-test.default.2",
            "metadata_labels": {
                "kat-ambassador-id": "tracingdriverlightstep",
                "scope": "AmbassadorTest"
            },
            "name": "lightstep-config_dump",
            "namespace": "default",
            "prefix": "/config_dump",
            "rewrite": "/config_dump",
            "rkey": "lightstep-config-test.default.2",
            "serialization": "_force_validation: true\nambassador_id: tracingdriverlightstep\napiVersion: ambassador/v0\nkind: Mapping\nmetadata_labels:\n  kat-ambassador-id: tracingdriverlightstep\n  scope: AmbassadorTest\nname: lightstep-config_dump\nnamespace: default\nprefix: /config_dump\nrewrite: /config_dump\nservice: http://127.0.0.1:8001\n",
            "service": "http://127.0.0.1:8001"
        }
    },
    "hosts": {
        "cleartext-host-tracingdriverlightstep": {
            "acmeProvider": {
                "authority": "none"
            },
            "ambassador_id": [
                "tracingdriverlightstep"
            ],
            "apiVersion": "getambassador.io/v2",
            "generation": 2,
            "hostname": "*",
            "kind": "Host",
            "metadata_labels": {
                "ambassador_crd": "cleartext-host-tracingdriverlightstep.default",
                "kat-ambassador-id": "tracingdriverlightstep",
                "scope": "AmbassadorTest"
            },
            "name": "cleartext-host-tracingdriverlightstep",
            "namespace": "default",
            "requestPolicy": {
                "insecure": {
                    "action": "Route"
                }
            },
            "selector": {
                "matchLabels": {
                    "hostname": "tracingdriverlightstep"
                }
            },
            "tlsSecret": {}
        }
    },
    "mappings": {
        "lightstep-config_dump": {
            "ambassador_id": "tracingdriverlightstep",
            "apiVersion": "getambassador.io/v0",
            "kind": "Mapping",
            "metadata_labels": {
                "kat-ambassador-id": "tracingdriverlightstep",
                "scope": "AmbassadorTest"
            },
            "name": "lightstep-config_dump",
            "namespace": "default",
            "prefix": "/config_dump",
            "rewrite": "/config_dump",
            "service": "http://127.0.0.1:8001"
        }
    },
    "service": {
        "k8s-lightstep-config-test-default": {
            "ambassador_id": "tracingdriverlightstep",
            "apiVersion": "getambassador.io/v2",
            "endpoints": {},
            "kind": "Service",
            "metadata_labels": {
                "kat-ambassador-id": "tracingdriverlightstep",
                "scope": "AmbassadorTest"
            },
            "name": "lightstep-config-test",
            "namespace": "default"
        },
        "k8s-tracingdriverlightstep-admin-default": {
            "ambassador_id": "tracingdriverlightstep",
            "apiVersion": "getambassador.io/v2",
            "endpoints": {},
            "kind": "Service",
            "metadata_labels": {
                "kat-ambassador-id": "tracingdriverlightstep",
                "scope": "AmbassadorTest",
                "service": "tracingdriverlightstep-admin"
            },
            "name": "tracingdriverlightstep-admin",
            "namespace": "default"
        },
        "k8s-tracingdriverlightstep-default": {
            "ambassador_id": "tracingdriverlightstep",
            "apiVersion": "getambassador.io/v2",
            "endpoints": {},
            "kind": "Service",
            "metadata_labels": {
                "app.kubernetes.io/component": "ambassador-service",
                "kat-ambassador-id": "tracingdriverlightstep",
                "scope": "AmbassadorTest"
            },
            "name": "tracingdriverlightstep",
            "namespace": "default"
        },
        "k8s-tracingdriverlightstep-http-default": {
            "ambassador_id": "tracingdriverlightstep",
            "apiVersion": "getambassador.io/v2",
            "endpoints": {},
            "kind": "Service",
            "metadata_labels": {
                "kat-ambassador-id": "tracingdriverlightstep",
                "scope": "AmbassadorTest"
            },
            "name": "tracingdriverlightstep-http",
            "namespace": "default"
        }
    },
    "tracing_configs": {
        "lightstep-config-test": {
            "ambassador_id": "tracingdriverlightstep",
            "apiVersion": "getambassador.io/v2",
            "config": {
                "access_token_file": "/etc/issue"
            },
            "driver": "lightstep",
            "kind": "TracingService",
            "metadata_labels": {
                "kat-ambassador-id": "tracingdriverlightstep",
                "scope": "AmbassadorTest"
            },
            "name": "lightstep-config-test",
            "namespace": "default",
            "service": "lightstep-config-test:9411"
        }
    }
}
